[package]
name = "robah"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "packages/asset_manager",
    "packages/dev_tools",
    "packages/three_d",
    "packages/window",
]

[workspace.dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_dylib = { version = "0.15.2" }

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_dylib = "0.15.2"
window = { path = "packages/window" }
three_d = { path = "packages/three_d" }
asset_manager = { path = "packages/asset_manager" }
dev_tools = { path = "packages/dev_tools" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
